[package]
name = "random-access-block"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
anyhow = "1.0.37"
bao = "0.10.1"
byteorder = "1.3.4"
memoffset = "0.6.1"
rkyv = { version = "0.2.1", features = ["const_generics", "std"] }
zstd = "0.6.0"

[dev-dependencies]
blake3 = "0.3.7"
